force-app/main/default/objects/Log_Event__c/Log_Event__c.object-meta.xml
<CustomObject>
    <label>Log Event</label>
    <nameField>
        <displayFormat>LOG-{00000000}</displayFormat>
        <label>Log Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>