force-app/main/default/objects/Log_Event__c/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <description>This is the Data</description>
    <label>Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>