force-app/main/default/objects/Log_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Severity__c</columns>
    <columns>Quiddity__c</columns>
    <columns>Transaction_Id__c</columns>
    <columns>Running_User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>